Fix: clean up redundant/unused code

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,9 @@ PINATA_GROUP_ID = ""
 
 WALLET_PRIVATE_KEY = ""
 REWARD_ADDRESS = ""
+
+JWT_SECRET = ""
+RPC_WS_URL = ""
+RPC_HTTP_URL = ""
+TOKEN_ADDRESS = ""
+ADMIN_ADDRESS = ""
